Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33666

QPrinterInfo.availablePrinters() not giving dynamic list of printers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.0 Beta1
    • 5.1.1
    • GUI: Printing
    • None
    • Debian Wheezy ,Mac OSX Lion, Windows
    • Windows: e6cac2c19315c9127f5b4048088e66da6b9296fe CUPS: 39eb7e0b898da9302afa23087913af45844135b5

      i used a timer to update the printer list using availablePrinters() . But it fails to list the new printer added, while running application
      but it working fine with qt4
      my code @ http://pastebin.com/4GihSYtS

        1. qtbug33666.zip
          145 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            vamattom joseph t vamattom
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes